kubernetes-templates/front-k8s/front-k8s-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-k8s
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: front-k8s-service
            port:
              number: 5006
